<resources>
    <string name="app_name">Fahrradkette</string>
    <string name="title_activity_new_pos">Neues Fahrad hinzufügen</string>
    <string name="newPos_addPos">Standort hinzufügen</string>
    <string name="newPos_nameThing">Name des Dings</string>
    <string name="newPos_finish">Veröffenlichen</string>
    <string name="newPos_addimage">Bild hinzufügen</string>
    <string name="newPos_specialities">Besonderheiten</string>
    <string name="updatePos_commentar">Anmerkungen/Meinung/Beschädigung hinzufügen</string>
    <string name="newPos_money">Gewinschter Preis (Bitte Fair sein)</string>
    <string name="newPos_pin">Fahrradschloss Pin (eigenen oder generirten pin nutzen)</string>
    <string name="title_activity_info">Info</string>
    <string name="toUpdatePos">Oder ein neues Fahrad hinzufügen</string>
    <string name="Info_info">Diese App wurde \n von 4 Entwickern entwickelt.\n Ende</string>
    <string name="action_settings">Einstellungen</string>

    <string name="list">Liste aller Fahrräder in der Nähe</string>
    <string name="action_info">Infos</string>
    <string name="myBikes">Meine Fahrräder</string>

    <string name="provder">provder</string>
    <string name="title_activity_list">Liste</string>
    <string name="title_activity_my_bikes">Meine Fahrräder</string>
    <string name="title_activity_update_pos">Fahrad wieder abgeben</string>

    <string-array name="updatePos_bikes">
        <item>Fahrad1</item>
        <item>Fahrad2</item>
        <item>Fahrad3</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Allgemeines</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
