<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".UpdatePos"
    tools:showIn="@layout/activity_update_pos">

    <Spinner
        android:id="@+id/updatePos_myBikes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/updatePos_bikes"
        android:spinnerMode="dialog" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newPos_pin" />

    <EditText
        android:id="@+id/updatePos_Pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberSigned" />

    <Button
        android:id="@+id/add_pos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/newPos_addPos"
        app:layout_constraintBottom_toTopOf="@+id/updatePos_finish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <TextView
        android:id="@+id/updatePos_Pos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Aktuelle Position"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/updatePos_commentar" />

    <EditText
        android:id="@+id/updatePos_commentar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/updatePos_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newPos_finish"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        android:textStyle="normal|bold" />

    <Button
        android:id="@+id/toUpdatePos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toUpdatePos" />

</LinearLayout>